added two Pictures

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/ethanF.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Videography and Photography</h2>
 										<p>Music videos, documentary style, portrait photography and more to come.</p>
@@ -79,7 +79,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/perryPic.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Give Up The Post</h2>
 										<p>One of the four enthusiastic members of the Give Up The Post podcast.</p>
