--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
 							<h2>Perry Productions</h2>
-							<p>Photo, Video, and even Podcasts <a href="http://html5up.net">HTML5 UP</a></p>
+							<p>Photo, Video, and even Podcasts</p>
 						</div>
 					</section>
 
@@ -59,7 +59,7 @@
 									<div class="content">
 										<h2 class="major">Blog posts</h2>
 										<p>All of my blog posts! Featuring satire, sarcasm, and wholesome info</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="https://medium.com/@drew_perry" class="special">Featured Blog Posts</a>
 									</div>
 								</div>
 							</section>
@@ -71,7 +71,7 @@
 									<div class="content">
 										<h2 class="major">Videography and Photography</h2>
 										<p>Music videos, documentary style, portrait photography and more to come.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="https://www.youtube.com/watch?v=FPUBfWGyLjE&t=184s" class="special">Newest Group Video!</a>
 									</div>
 								</div>
 							</section>
@@ -83,7 +83,7 @@
 									<div class="content">
 										<h2 class="major">Give Up The Post</h2>
 										<p>One of the four enthusiastic members of the Give Up The Post podcast.</p>
-										<a href="#" class="special">Learn more</a>
+										<a href="https://soundcloud.com/user-243192277/give-up-the-post-therapy-not-finsta" class="special">Give Up The Post Ep: 1</a>
 									</div>
 								</div>
 							</section>
@@ -91,14 +91,14 @@
 						<!-- Four -->
 							<section id="four" class="wrapper alt style1">
 								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
+									<h2 class="major">Quick featured links!</h2>
+									<p>Instagram, medium account, and more goodies.</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">My instagram</h3>
+											<p>Photography and me.</p>
+											<a href="https://www.instagram.com/perry.pics/" class="special">Instagram Account</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
