--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/websiteMentalPic.png" alt="" /></a>
 											<h3 class="major">Mental Health Info</h3>
-											<p>Here is more info related to mental health</p>
+											<p>Here is more info related to mental health!</p>
 											<a href="https://www.centreformentalhealth.org.uk/blog/centre-mental-health-blog/anxiety-loneliness-fear-missing-out-social-media" class="special">Learn more</a>
 										</article>
 
